[gd_scene load_steps=3 format=3 uid="uid://djell61ihumru"]

[ext_resource type="Script" uid="uid://dl20tpi5syq7u" path="res://scenes/map.gd" id="1_4xfga"]

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_4xfga"]
properties/0/path = NodePath(".:img_bytes")
properties/0/spawn = true
properties/0/replication_mode = 0
properties/1/path = NodePath(".:position")
properties/1/spawn = true
properties/1/replication_mode = 0

[node name="map" type="PanelContainer"]
z_index = -1
mouse_filter = 2
script = ExtResource("1_4xfga")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="header" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="header" type="Button" parent="VBoxContainer/header"]
layout_mode = 2
size_flags_horizontal = 3
focus_mode = 0
flat = true

[node name="close" type="Button" parent="VBoxContainer/header"]
custom_minimum_size = Vector2(30, 30)
layout_mode = 2
text = "Ã—"

[node name="TextureRect" type="TextureRect" parent="VBoxContainer"]
layout_mode = 2

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_4xfga")

[connection signal="button_down" from="VBoxContainer/header/header" to="." method="_on_header_button_down"]
[connection signal="button_up" from="VBoxContainer/header/header" to="." method="_on_header_button_up"]
[connection signal="pressed" from="VBoxContainer/header/close" to="." method="_on_close_pressed"]
